--- a/perfil.html
+++ b/perfil.html
@@ -1,105 +1,207 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfil do Ministro • Ministerium</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Perfil • Ministerium</title>
 
     <style>
-        body {
+        * {
             margin: 0;
-            font-family: "Inter", Arial, sans-serif;
-            background: #f5f5f5;
+            padding: 0;
+            box-sizing: border-box;
         }
-        header {
-            background: #1e1e2f;
-            padding: 20px;
-            color: white;
-            text-align: center;
+
+        body {
+            font-family: "Inter", sans-serif;
+            background: #f5f7ff;
+            color: #222;
+            padding-top: 80px;
+            transition: 0.3s;
         }
-        .container {
-            max-width: 900px;
-            margin: 30px auto;
-            padding: 20px;
-            background: white;
-            border-radius: 12px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+
+        body.dark {
+            background: #0d0d12;
+            color: #eee;
         }
-        .profile-header {
+
+        /* MENU */
+        nav {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            height: 70px;
+            background: #1f1d2e;
             display: flex;
-            gap: 30px;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 25px;
+            color: white;
+            z-index: 999;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+        }
+
+        nav a {
+            color: #b7b9ff;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+
+        nav button {
+            background: #4a3df6;
+            border: none;
+            padding: 8px 14px;
+            border-radius: 8px;
+            color: white;
+            cursor: pointer;
+        }
+
+        .container {
+            max-width: 1000px;
+            margin: 25px auto;
+            padding: 20px;
+        }
+
+        .profile-box {
+            background: white;
+            padding: 25px;
+            border-radius: 14px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+            display: flex;
+            gap: 25px;
             flex-wrap: wrap;
         }
-        img {
-            width: 260px;
-            border-radius: 12px;
+
+        body.dark .profile-box {
+            background: #1a1a22;
+            box-shadow: 0 4px 20px rgba(255, 255, 255, 0.04);
+        }
+
+        .profile-box img {
+            width: 280px;
+            height: 330px;
             object-fit: cover;
+            border-radius: 14px;
         }
+
         .tag {
-            background: #e2e8ff;
-            color: #364fc7;
+            background: #dedcff;
+            color: #4a3df6;
             padding: 5px 12px;
-            border-radius: 6px;
-            margin-right: 6px;
-            margin-top: 6px;
-            display: inline-block;
-        }
-        .btn {
-            display: inline-block;
-            padding: 12px 20px;
-            background: #364fc7;
-            color: white;
             border-radius: 8px;
-            text-decoration: none;
-            margin-top: 20px;
+            display: inline-block;
+            margin-right: 5px;
+            margin-top: 5px;
         }
+
         iframe {
             width: 100%;
-            height: 380px;
-            margin-top: 20px;
+            height: 360px;
             border-radius: 12px;
+            margin-top: 20px;
+        }
+
+        .agenda {
+            background: white;
+            padding: 18px;
+            margin-top: 25px;
+            border-radius: 12px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+        }
+
+        body.dark .agenda {
+            background: #1a1a22;
+        }
+
+        .agenda-item {
+            padding: 12px;
+            border-bottom: 1px solid #ddd;
+        }
+
+        body.dark .agenda-item {
+            border-color: #333;
+        }
+
+        footer {
+            background: #1f1d2e;
+            padding: 20px;
+            color: #bdbdff;
+            text-align: center;
+            margin-top: 40px;
         }
     </style>
 </head>
+
 <body>
 
-<header>
-    <h1>Perfil do Ministro</h1>
-</header>
-
-<div class="container">
-
-    <div class="profile-header">
-        <img src="https://source.unsplash.com/random/400x400?person" alt="Foto do Ministro">
-
+    <nav>
+        <div><strong>Ministerium</strong></div>
         <div>
-            <h2>Pr. João Silva</h2>
-            <p>Palestrante, mentor familiar e conferencista.</p>
+            <a href="index.html">Catálogo</a>
+            <a href="pre-cadastro.html">Pré-Cadastro</a>
+            <a href="admin.html">Admin</a>
+        </div>
+        <button onclick="toggleDarkMode()">🌙</button>
+    </nav>
 
-            <strong>Temáticas:</strong><br>
-            <span class="tag">Jovens</span>
-            <span class="tag">Casais</span>
-            <span class="tag">Família</span>
+    <div class="container">
 
-            <br><br>
-            <strong>Contato:</strong><br>
-            📞 (48) 99999-0000<br>
-            ✉ joao@example.com<br>
+        <div class="profile-box">
+            <img src="https://source.unsplash.com/random/400x500?pastor" />
 
-            <a href="https://wa.me/5548999990000" class="btn">WhatsApp</a>
+            <div>
+                <h2>Pr. João Silva</h2>
+                <p style="margin-top: 10px;">
+                    Conferencista, palestrante de jovens e casais, atuando há 15 anos em
+                    igrejas e eventos no Brasil.
+                </p>
+
+                <strong style="display: block; margin-top: 15px;">Temáticas:</strong>
+                <span class="tag">Casais</span>
+                <span class="tag">Jovens</span>
+                <span class="tag">Família</span>
+
+                <strong style="display: block; margin-top: 20px;">Contato:</strong>
+                📞 (48) 99999-0000<br />
+                ✉ joao@example.com<br />
+
+                <a href="https://wa.me/5548999990000" style="
+                        display: inline-block;
+                        margin-top: 15px;
+                        background: #4a3df6;
+                        padding: 10px 16px;
+                        color: white;
+                        text-decoration: none;
+                        border-radius: 10px;
+                    ">Falar no WhatsApp</a>
+            </div>
+        </div>
+
+        <h3 style="margin-top: 30px;">Vídeo de Apresentação</h3>
+        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ"></iframe>
+
+        <h3 style="margin-top: 30px;">Agenda Simulada</h3>
+        <div class="agenda">
+            <div class="agenda-item">
+                📅 12/01/2025 — Congresso de Jovens — Igreja Assembleia da Paz
+            </div>
+            <div class="agenda-item">
+                📅 26/01/2025 — Seminário de Casais — Igreja Mais de Cristo
+            </div>
+            <div class="agenda-item">
+                📅 10/02/2025 — Culto da Família — Comunidade Cristo Vive
+            </div>
         </div>
     </div>
 
-    <h3>Vídeo de Apresentação</h3>
-    <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ"></iframe>
+    <footer>Ministerium © 2025 — Conectando ministérios ao propósito</footer>
 
-    <h3>Sobre</h3>
-    <p>
-        João Silva é um ministrante com mais de 15 anos atuando em conferências de jovens,
-        seminários de casais e eventos nacionais. Sua mensagem é centrada em Cristo,
-        com forte base bíblica e linguagem contemporânea.
-    </p>
-</div>
-
+    <script>
+        function toggleDarkMode() {
+            document.body.classList.toggle("dark");
+        }
+    </script>
 </body>
+
 </html>
