--- a/pre-cadastro.html
+++ b/pre-cadastro.html
@@ -1,92 +1,190 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pré-Cadastro • Ministerium</title>
 
     <style>
-        body {
+        * {
             margin: 0;
-            font-family: "Inter", Arial, sans-serif;
-            background: #f5f5f5;
+            padding: 0;
+            box-sizing: border-box;
         }
-        header {
-            background: #1e1e2f;
-            padding: 25px;
+
+        body {
+            font-family: "Inter", sans-serif;
+            background: #f5f7ff;
+            padding-top: 80px;
+            transition: 0.3s;
+        }
+
+        body.dark {
+            background: #0d0d12;
+            color: #eee;
+        }
+
+        nav {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            height: 70px;
+            background: #1f1d2e;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 25px;
             color: white;
-            text-align: center;
+            z-index: 999;
         }
+
+        nav a {
+            color: #b7b9ff;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+
+        nav button {
+            background: #4a3df6;
+            border: none;
+            padding: 8px 14px;
+            border-radius: 8px;
+            color: white;
+            cursor: pointer;
+        }
+
         .container {
             max-width: 600px;
-            margin: 40px auto;
-            background: white;
+            margin: 25px auto;
             padding: 25px;
-            border-radius: 12px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+            background: white;
+            border-radius: 14px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
         }
-        input, select, textarea {
-            width: 100%;
-            padding: 12px;
-            margin-top: 12px;
-            border-radius: 8px;
-            border: 1px solid #ccc;
+
+        body.dark .container {
+            background: #1a1a22;
         }
-        button {
+
+        input,
+        select,
+        textarea {
             width: 100%;
             padding: 14px;
+            margin-top: 12px;
+            border-radius: 10px;
+            border: 1px solid #ccc;
+            background: #fff;
+        }
+
+        body.dark input,
+        body.dark textarea,
+        body.dark select {
+            background: #2b2b36;
+            border-color: #333;
+            color: #eee;
+        }
+
+        .btn {
+            width: 100%;
+            padding: 14px;
+            background: #4a3df6;
+            color: white;
             margin-top: 20px;
             border: none;
-            border-radius: 8px;
-            background: #364fc7;
-            color: white;
-            font-size: 16px;
+            border-radius: 10px;
+            cursor: pointer;
         }
-        button:hover {
-            background: #2c42b0;
+
+        .upload-box {
+            margin-top: 15px;
+            padding: 20px;
+            border: 2px dashed #4a3df6;
+            border-radius: 12px;
+            text-align: center;
+            background: #f7f5ff;
+        }
+
+        body.dark .upload-box {
+            background: #232330;
+            border-color: #8a85ff;
+        }
+
+        footer {
+            background: #1f1d2e;
+            padding: 20px;
+            color: #bdbdff;
+            text-align: center;
+            margin-top: 40px;
         }
     </style>
 </head>
+
 <body>
 
-<header>
-    <h1>Pré-Cadastro</h1>
-    <p>Faça parte do catálogo Ministerium</p>
-</header>
+    <nav>
+        <div><strong>Ministerium</strong></div>
+        <div>
+            <a href="index.html">Catálogo</a>
+            <a href="pre-cadastro.html">Pré-Cadastro</a>
+            <a href="admin.html">Admin</a>
+        </div>
+        <button onclick="toggleDarkMode()">🌙</button>
+    </nav>
 
-<div class="container">
+    <div class="container">
+        <h2>Pré-Cadastro</h2>
+        <p style="margin-top: 10px;">
+            Preencha suas informações e nosso time entrará em contato.
+        </p>
 
-    <label>Nome Completo</label>
-    <input type="text">
+        <label>Nome Completo</label>
+        <input type="text" />
 
-    <label>Tipo</label>
-    <select>
-        <option value="">Selecione</option>
-        <option value="pregador">Pregador</option>
-        <option value="musico">Músico</option>
-        <option value="banda">Banda</option>
-    </select>
+        <label>Tipo</label>
+        <select>
+            <option value="">Selecione</option>
+            <option>Pregador</option>
+            <option>Músico</option>
+            <option>Banda</option>
+        </select>
 
-    <label>Telefone</label>
-    <input type="text">
+        <label>Telefone</label>
+        <input type="text" />
 
-    <label>E-mail</label>
-    <input type="email">
+        <label>E-mail</label>
+        <input type="email" />
 
-    <label>Cidade</label>
-    <input type="text">
+        <label>Cidade</label>
+        <input type="text" />
 
-    <label>Estado</label>
-    <input type="text">
+        <label>Estado</label>
+        <input type="text" maxlength="2" />
 
-    <label>Temáticas / Estilos</label>
-    <textarea rows="3"></textarea>
+        <label>Temáticas / Estilos</label>
+        <textarea rows="3"></textarea>
 
-    <label>Link de Vídeo (YouTube ou Instagram)</label>
-    <input type="url">
+        <label>Link de Vídeo</label>
+        <input type="url" />
 
-    <button>Enviar Pré-Cadastro</button>
-</div>
+        <label>Foto de Perfil</label>
+        <div class="upload-box">
+            Clique para enviar sua foto<br />
+            <small>(Simulação — ainda sem backend)</small>
+            <input type="file" style="margin-top: 10px;" />
+        </div>
 
+        <button class="btn">Enviar Pré-Cadastro</button>
+    </div>
+
+    <footer>Ministerium © 2025 — Conectando ministérios ao propósito</footer>
+
+    <script>
+        function toggleDarkMode() {
+            document.body.classList.toggle("dark");
+        }
+    </script>
 </body>
+
 </html>
